--- a/power calc its brazil states u12m and 80plus.Rmd
+++ b/power calc its brazil states u12m and 80plus.Rmd
@@ -313,10 +313,10 @@ power.month.trim.array<-do.call('cbind', power.month.trim)
 mse.trim<-mapply(mse.func, rr.ests.compile.trim, true.rr=0.8, SIMPLIFY=F)
 ```
 
-```{r, fig.width=6, fig.height=6}
+```{r, fig.width=12, fig.height=6}
 pal1<-viridis_pal(option='cividis')(length(trim.lengths))
 legend_image <- as.raster(matrix(pal1, ncol=1))
-
+par(mfrow=c(1,2))
 par( mar=c(4,4,1,1))
 for(i in 1:length(power.month.trim)){
 if(i==1){
@@ -340,9 +340,9 @@ axis(side=1, at=c(2:10),labels=round(exp(2:10),-1) )
 
 }
 }
-rasterImage(legend_image, 0.075, 0.15, 0.085,0.25)
-text( x=rep(0.095, 3) , y=seq(from=0.25, to=0.15, length.out=3) , rev(seq(from=12, to=72 ,by=24)))
-text(x=0.075, y=0.26, 'Baseline Months (N)', adj=c(0,0), xpd=NA)
+#rasterImage(legend_image, 0.075, 0.16, 0.085,0.24)
+#text( x=rep(0.095, 3) , y=seq(from=0.24, to=0.16, length.out=3) , rev(seq(from=12, to=72 ,by=24)))
+#text(x=0.075, y=0.26, 'Baseline Months (N)', adj=c(0,0), xpd=NA)
 ```
 
 ```{r}
